Remove draggable elements default presentational CSS of -webkit-user-select: none https://bugs.webkit.org/show_bug.cgi?id=234716

Reviewed by Tim Nguyen.

This behaves similar to both Firefox and Chromium. Draggable elements do not make them
un-selectable. When selected, dragging still takes priority also like other browsers.

* LayoutTests/fast/html/find-selects-draggable-element-expected.txt: Added.
* LayoutTests/fast/html/find-selects-draggable-element.html: Added.
* Source/WebCore/html/HTMLElement.cpp:
  (WebCore::HTMLElement::collectPresentationalHintsForAttribute):

Canonical link: https://commits.webkit.org/264448@main